fixed line break on mobile subtitle

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -53,7 +53,10 @@
       max-width: 90%;
       top: 17%;
 
-      p { margin: 0;}
+      p {
+        margin: 0;
+        font-size: $type-4 - 2px;
+      }
     }
   }
 }
